# las

./: .gitignore  CITATION.md  GUIDE.md  LICENSE  README.md  pyproject.toml  run.py
docs/: ALIGNMENT_ARCHITECTURE.md  FAQ.md  THEORY.md
eqlang/: SPEC.md  __init__.py  __main__.py  ast_nodes.py  interpreter.py  lexer.py  parser.py  tokens.py
eqlang/examples/: compound_conditions.eql  ethics_demo.eql  full_showcase.eql  healthcare_gate.eql  hello_world.eql  pipeline.eql  self_dialogue.eql  temporal_eq.eql  tension_release.eql
eqlang/runtime/: __init__.py  base.py  mock_runtime.py  standard_runtime.py
eqlang/tests/: test_eqlang.py
